# rust-donki-api

./: Cargo.toml
src/: donki_config.toml  main.rs  structs.rs  toml_reader.rs
src/structs/: coronal_mass_ejection_response.rs  donki_config.rs
