[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[package]
name = "rust-donki-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
toml = "0.5"
serde = "1.0"
#reqwest = { version = "0.11", features = ["json"] }
